# MVE

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.py  main_1.cpp  main_1.py  test.cpp
.PVS-Studio/: depend_info.json
src/: CMakeLists.txt
src/lab1/: CMakeLists.txt  main.cxx
src/lab2/: CMakeLists.txt  main.cxx
